kustomize/overlays/alpha/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trials-service-ingress
spec:
  rules:
    - host: latest.pjptrials.link
      http:
        paths:
          - path: /rest
            pathType: Prefix
            backend:
              service:
                name: trials-service
                port:
                  number: 80
  tls:
    - secretName: trials-service-cert
      hosts:
        - latest.pjptrials.link
